--- a/README.org
+++ b/README.org
@@ -186,7 +186,7 @@ This is an attempt to put my nix files in this org-mode file
 
   #Keyring for wifi password
   services.gnome.gnome-keyring.enable = true;
-  environment.variables.XDG_RUNTIME_DIR = "/run/user/$UID"
+  environment.variables.XDG_RUNTIME_DIR = "/run/user/$UID";
 
   # Set your time zone.
   time.timeZone = "America/Chicago";
