add polkit and gparted

--- a/README.org
+++ b/README.org
@@ -209,6 +209,9 @@ This is an attempt to put my nix files in this org-mode file
   # Enable the X11 windowing system.
   services.xserver.enable = true;
 
+  #Enable polkit (policy kit)
+  security.polkit.enable = true;
+
   # # Enable the KDE Plasma Desktop Environment.
   services.displayManager.sddm.enable = true;
   #services.xserver.desktopManager.plasma5.enable = true;
@@ -297,7 +300,9 @@ This is an attempt to put my nix files in this org-mode file
     ghostty
     zsh
     home-manager
+    gparted
     seahorse
+    polkit
 ];
 
   # Some programs need SUID wrappers, can be configured further or are
