user permissions on Filesystems

--- a/README.org
+++ b/README.org
@@ -85,9 +85,6 @@ This is an attempt to put my nix files in this org-mode file
     yt-dlp
     syncplay
 
-    #plex
-    plex
-
 
     #python
     #(python314.withPackages (ppkgs: [
@@ -405,7 +402,7 @@ programs.zsh = {
   fileSystems."/media" = { # Choose your desired mount point
     device = "/dev/disk/by-uuid/940f4332-3aaf-4e83-a244-5d0e3f788569"; # Replace with your actual UUID
     fsType = "ext4"; # Replace with your filesystem type (e.g., "btrfs", "xfs")
-    options = [ "defaults" "nofail" ]; # Common options, "nofail" is useful for HDDs
+    options = [ "defaults" "users" "nofail" ]; # Common options, "nofail" is useful for HDDs
   };
 
 }
