add plex user group declaratively

--- a/README.org
+++ b/README.org
@@ -304,11 +304,14 @@ systemd = {
   # Enable touchpad support (enabled default in most desktopManager).
   # services.xserver.libinput.enable = true;
 
+  # Define user groups
+  users.groups.plexusers = {};
+
   # Define a user account. Don't forget to set a password with ‘passwd’.
   users.users.andrew = {
     isNormalUser = true;
     description = "Andrew";
-    extraGroups = [ "networkmanager" "wheel" ];
+    extraGroups = [ "networkmanager" "wheel" "plexusers"];
     packages = with pkgs; [
     #  kate
     #  thunderbird
@@ -316,6 +319,11 @@ systemd = {
     shell = pkgs.zsh;
   };
 
+  users.users.plex = {
+    isSystemUser = true; # Plex usually runs as a system user
+    extraGroups = [ "plexusers" ]; # Add "plexusers" here
+    # Other Plex user properties might be managed by the Plex module
+  };
   # Install firefox.
   programs.firefox.enable = true;
 
@@ -403,6 +411,8 @@ programs.zsh = {
     device = "/dev/disk/by-uuid/940f4332-3aaf-4e83-a244-5d0e3f788569"; # Replace with your actual UUID
     fsType = "ext4"; # Replace with your filesystem type (e.g., "btrfs", "xfs")
     options = [ "defaults" "users" "nofail" ]; # Common options, "nofail" is useful for HDDs
+    group = "plexusers";
+    mode = "0775";
   };
 
 }
