add plex user group declaratively

--- a/README.org
+++ b/README.org
@@ -324,6 +324,25 @@ systemd = {
     extraGroups = [ "plexusers" ]; # Add "plexusers" here
     # Other Plex user properties might be managed by the Plex module
   };
+
+   # Use activationScripts to set permissions *after* the system is mounted
+  # This runs every time you rebuild your NixOS configuration.
+  system.activationScripts.setMediaPermissions = ''
+    echo "Setting permissions for /media for Plex and users..."
+
+    # Ensure /media is actually mounted before attempting to change permissions
+    if ! mountpoint -q /media; then
+      echo "/media is not mounted, skipping permission setup." >&2
+      exit 0 # Exit successfully, as the drive might be absent (e.g., external)
+    fi
+
+    # Use absolute paths to coreutils and findutils binaries provided by Nixpkgs
+    ${pkgs.coreutils}/bin/chown -R plex:plexusers /media
+    ${pkgs.findutils}/bin/find /media -type d -exec ${pkgs.coreutils}/bin/chmod 775 {} \;
+    ${pkgs.findutils}/bin/find /media -type f -exec ${pkgs.coreutils}/bin/chmod 664 {} \;
+  '';
+
+
   # Install firefox.
   programs.firefox.enable = true;
 
@@ -411,8 +430,6 @@ programs.zsh = {
     device = "/dev/disk/by-uuid/940f4332-3aaf-4e83-a244-5d0e3f788569"; # Replace with your actual UUID
     fsType = "ext4"; # Replace with your filesystem type (e.g., "btrfs", "xfs")
     options = [ "defaults" "users" "nofail" ]; # Common options, "nofail" is useful for HDDs
-    group = "plexusers";
-    mode = "0775";
   };
 
 }
