--- a/README.org
+++ b/README.org
@@ -48,21 +48,18 @@ This is an attempt to put my nix files in this org-mode file
     gcc
     llvm
     fzf
+    age
+    sops
 
     #social
     telegram-desktop
     discord
 
     #zsh-related
-    oh-my-zsh
-    starship
     fastfetch
 
 
     #hyprland stuff
-    kitty
-    hyprland
-    #hyprgui apparently repository abandonded?
     rofi
     rofi-network-manager
     rofi-file-browser
@@ -73,6 +70,7 @@ This is an attempt to put my nix files in this org-mode file
     obsidian
     obs-studio
     qbittorrent
+
 
     #zen-browser
     floorp
@@ -169,7 +167,6 @@ This is an attempt to put my nix files in this org-mode file
     [ # Include the results of the hardware scan.
       ./hardware-configuration.nix
       ./filesystem.nix
-     # <home-manager/nixos>
     ];
 
   # Bootloader.
@@ -198,7 +195,37 @@ This is an attempt to put my nix files in this org-mode file
 
   };
 
-  # Enable networking
+  # Inside configuration.nix, at the top level with other options like networking, services, etc.
+sops = {
+  defaultSopsFile = ./secrets/secrets.yaml; # Path relative to configuration.nix
+  defaultSopsFormat = "yaml"; # Or json, dotenv, etc.
+
+  # Define each secret you want to make available to the system.
+  # The key names here must match the keys in your secrets.yaml.
+  secrets = {
+    "wifiPassword" = { # This matches "wifiPassword" in your secrets/secrets.yaml
+      # Optional: You can specify owner, group, and mode for the decrypted file
+      owner = "root";
+      group = "networkmanager";
+      mode = "0400";
+      # e.g., owner = "root"; group = "networkmanager"; mode = "0400";
+      # Consider 'neededForUsers = true;' if a non-root user or service needs it
+      # (e.g., NetworkManager might need to read it if you configure wifi directly).
+    };
+    # Add other secrets here if you have them, e.g., "myApiKey" = {};
+  };
+
+  # Optional: You can also define templates to combine multiple secrets into one file.
+  # templates."my_app.env" = {
+  #   content = ''
+  #     MY_API_KEY="${config.sops.placeholder.myApiKey}"
+  #   '';
+  #   owner = "myuser";
+  #   mode = "0400";
+  # };
+};
+
+   # Enable networking
   networking.networkmanager.enable = true;
 
   #Keyring for wifi password
@@ -337,7 +364,7 @@ systemd = {
     fi
 
     # Use absolute paths to coreutils and findutils binaries provided by Nixpkgs
-    ${pkgs.coreutils}/bin/chown -R plex:plexusers /media
+    ${pkgs.coreutils}/bin/chown -R andrew:plexusers /media
     ${pkgs.findutils}/bin/find /media -type d -exec ${pkgs.coreutils}/bin/chmod 775 {} \;
     ${pkgs.findutils}/bin/find /media -type f -exec ${pkgs.coreutils}/bin/chmod 664 {} \;
   '';
@@ -396,6 +423,13 @@ programs.zsh = {
    autosuggestions.enable = true;
    syntaxHighlighting.enable = true;
 };
+
+
+
+
+
+
+
   # List services that you want to enable:
 
   # Enable the OpenSSH daemon.
@@ -449,9 +483,11 @@ programs.zsh = {
     home-manager.url = "github:nix-community/home-manager";
     home-manager.inputs.nixpkgs.follows = "nixpkgs";
     hyprland.url = "github:hyprwm/Hyprland";
+    sops-nix.url = "github:Mic92/sops-nix";
+    sops-nix.inputs.nixpkgs.follows = "nixpkgs";
   };
 
-  outputs = inputs@{ nixpkgs, home-manager, ... }: {
+  outputs = inputs@{ nixpkgs, home-manager, sops-nix, ... }: {
     nixosConfigurations = {
       default = nixpkgs.lib.nixosSystem {
         system = "x86_64-linux";
@@ -467,6 +503,7 @@ programs.zsh = {
             # Optionally, use home-manager.extraSpecialArgs to pass
             # arguments to home.nix
           }
+          sops-nix.nixosModules.sops
         ];
       };
     };
