--- a/README.org
+++ b/README.org
@@ -204,7 +204,7 @@ This is an attempt to put my nix files in this org-mode file
 sops = {
   defaultSopsFile = ./secrets/secrets.yaml; # Path relative to configuration.nix
   defaultSopsFormat = "yaml"; # Or json, dotenv, etc.
-  age.keyFile = "~/.config/sops/age/keys.txt";
+  age.keyFile = "/home/andrew/.config/sops/age/keys.txt";
 
   # Define each secret you want to make available to the system.
   # The key names here must match the keys in your secrets.yaml.
@@ -237,7 +237,7 @@ sops = {
 
 services.pia = {
   enable = true;
-  authUserPassFile = config.sops.secrets.authUserPass;
+  authUserPassFile = config.sops.defaultSopsFile;
 };
    # Enable networking
   networking.networkmanager.enable = true;
