--- a/README.org
+++ b/README.org
@@ -51,6 +51,7 @@ This is an attempt to put my nix files in this org-mode file
     age
     sops
     gnumake
+    openvpn3
 
     #social
     telegram-desktop
@@ -141,6 +142,7 @@ This is an attempt to put my nix files in this org-mode file
     EDITOR = "emacs";
   };
   programs.waybar.enable = true;
+
 
   programs.emacs.extraPackages = epkgs: with epkgs; [
     vterm
@@ -239,6 +241,11 @@ services.pia = {
   enable = true;
   authUserPassFile = config.sops.defaultSopsFile;
 };
+
+
+  programs.openvpn3.enable = true;
+
+
    # Enable networking
   networking.networkmanager.enable = true;
 
