comment out activation script for testing

--- a/README.org
+++ b/README.org
@@ -380,21 +380,21 @@ systemd = {
 
    # Use activationScripts to set permissions *after* the system is mounted
   # This runs every time you rebuild your NixOS configuration.
-  system.activationScripts.setMediaPermissions = ''
-    echo "Setting permissions for /media for Plex and users..."
-
-    # Ensure /media is actually mounted before attempting to change permissions
-    if ! mountpoint -q /media; then
-      echo "/media is not mounted, skipping permission setup." >&2
-      exit 0 # Exit successfully, as the drive might be absent (e.g., external)
-    fi
-
-    # Use absolute paths to coreutils and findutils binaries provided by Nixpkgs
-    ${pkgs.coreutils}/bin/chown -R andrew:plexusers /media
-    ${pkgs.findutils}/bin/find /media -type d -exec ${pkgs.coreutils}/bin/chmod 775 {} \;
-    ${pkgs.findutils}/bin/find /media -type f -exec ${pkgs.coreutils}/bin/chmod 664 {} \;
-  '';
-
+#  system.activationScripts.setMediaPermissions = ''
+#   echo "Setting permissions for /media for Plex and users..."
+#
+#    # Ensure /media is actually mounted before attempting to change permissions
+#    if ! mountpoint -q /media; then
+#      echo "/media is not mounted, skipping permission setup." >&2
+#      exit 0 # Exit successfully, as the drive might be absent (e.g., external)
+#    fi
+#
+#    # Use absolute paths to coreutils and findutils binaries provided by Nixpkgs
+#    ${pkgs.coreutils}/bin/chown -R andrew:plexusers /media
+#    ${pkgs.findutils}/bin/find /media -type d -exec ${pkgs.coreutils}/bin/chmod 775 {} \;
+#    ${pkgs.findutils}/bin/find /media -type f -exec ${pkgs.coreutils}/bin/chmod 664 {} \;
+#  '';
+#
 
   # Install firefox.
   programs.firefox.enable = true;
