fix name of overlay

--- a/README.org
+++ b/README.org
@@ -73,7 +73,7 @@ This is an attempt to put my nix files in this org-mode file
 
           ({
             nixpkgs.overlays = [
-              (import ./overlays/sddm-theme.nix)
+              (import ./overlays/sddm-themes.nix)
             ];
           })
         ];
