remove overlay add libinput

--- a/README.org
+++ b/README.org
@@ -71,11 +71,11 @@ This is an attempt to put my nix files in this org-mode file
           sops-nix.nixosModules.sops
           pia.nixosModules."x86_64-linux".default
 
-          ({
-            nixpkgs.overlays = [
-              (import ./overlays/sddm-themes.nix)
-            ];
-          })
+        # ({
+        #   nixpkgs.overlays = [
+        #     (import ./overlays/sddm-themes.nix)
+        #   ];
+        # })
         ];
       };
     };
@@ -158,17 +158,7 @@ This is an attempt to put my nix files in this org-mode file
     cliphist
     waypaper
     xfce.thunar
-    kdePackages.ark
-    kdePackages.dolphin
-    kdePackages.qt6ct
-    libsForQt5.qt5ct
-    kdePackages.sddm-kcm
-    kdePackages.qtvirtualkeyboard
-    kdePackages.qtmultimedia
-    kdePackages.qtsvg
-    libsForQt5.qt5.qtgraphicaleffects
-    libsForQt5.qt5.qtquickcontrols2
-    libsForQt5.qt5.qtsvg
+
 
 
     obsidian
@@ -446,6 +436,7 @@ sops = {
     LC_TIME = "en_US.UTF-8";
   };
 
+  libinput.enable = true;
 #+end_src
 
 ** Windowing and SDDM
@@ -456,10 +447,19 @@ sops = {
 
   # # Enable the KDE Plasma Desktop Environment.
   services.displayManager.sddm = {
-    enable = true;
-    theme = "sugar-dark";
-    wayland.enable = true;
-    };
+  enable = true;
+  wayland.enable = true;
+  package = pkgs.kdePackages.sddm;
+  theme = "catppuccin-mocha";
+  extraPackages = with pkgs.kdePackages; [
+    breeze-icons
+    kirigami
+    plasma5support
+    qtsvg
+    qtvirtualkeyboard
+  ];
+};
+
   #services.xserver.desktopManager.plasma5.enable = true;
 
 
@@ -573,13 +573,35 @@ environment.systemPackages = with pkgs; [
     seahorse
     polkit
     polkit_gnome
+    libinput
+
+    kdePackages.sddm
+    kdePackages.ark
+    kdePackages.dolphin
+    kdePackages.qt6ct
+    kdePackages.sddm-kcm
+    kdePackages.qtvirtualkeyboard
+    kdePackages.qtmultimedia
+    kdePackages.qtsvg
+    kdePackages.qtdeclarative
+
+
+
+
+#   libsForQt5.qt5.qtgraphicaleffects
+#   libsForQt5.qt5ct
+#   libsForQt5.qt5.qtquickcontrols2
+#   libsForQt5.qt5.qtsvg
+#   libsForQt5.qt5.qtmultimedia
+
+
 
     python3
     waybar #some weirdness about having it in home-manager
     inputs.zen-browser.packages."${system}".specific
     catppuccin-sddm
     sddm-sugar-dark
-    sddm-astronaut-theme
+    sddm-astronaut
 
 ];
 
